    incorrectly skipped, such that the sub-query was parsed as `i` instead of `> i`.
    <https://github.com/jhy/jsoup/issues/1707>

  * Bugfix: in W3CDom, if the jsoup input document contained an empty doctype, the conversion would fail with a
    DOMException. Now, said doctype is discarded, and the conversion continues.

  * Build Improvement: added a local test proxy implementation, for proxy integration tests.
    <https://github.com/jhy/jsoup/pull/2029>

  * Build Improvement: added tests for HTTPS request support, using a local self-signed cert. Includes proxy tests.
    <https://github.com/jhy/jsoup/pull/2032>

  * Change: the InputStream returned in Connection.Response.bodyStream() is no longer a ConstrainedInputStream, and
    so is not subject to settings such as timeout or maximum size. It is now a plain BufferedInputStream around the
    response stream. Whilst this behaviour was not documented, you may have been inadvertently relying on those
    constraints. The constraints are still applied to other methods such as .parse() and .bufferUp(). So if you do want
    a constrained BufferedInputStream, you may do Connection.Response.bufferUp().bodyStream().
    <https://github.com/jhy/jsoup/issues/2054>

Release 1.16.2 [20-Oct-2023]
  * Improvement: optimized the performance of complex CSS selectors, by adding a cost-based query planner. Evaluators
    are sorted by their relative execution cost, and executed in order of lower to higher cost. This speeds the
    matching process by ensuring that simpler evaluations (such as a tag name match) are conducted prior to more
    complex evaluations (such as an attribute regex, or a deep child scan with a :has).

  * Improvement: added support for <svg> and <math> tags (and their children). This includes tag namespaces and case
    preservation on applicable tags and attributes.
    <https://github.com/jhy/jsoup/pull/2008>
