@@ -9,7 +9,11 @@ import org.jsoup.nodes.Entities;
 import org.jsoup.nodes.Range;
 import org.jsoup.parser.Parser;
 import org.junit.jupiter.api.Test;
+import org.junit.jupiter.params.ParameterizedTest;
+import org.junit.jupiter.params.provider.MethodSource;
+import org.junit.jupiter.params.provider.ValueSource;
 
+import java.util.Arrays;
 import java.util.Locale;
 
 import static org.junit.jupiter.api.Assertions.*;
@@ -399,4 +403,30 @@ public class CleanerTest {
         assertEquals(cleanRange, origRange);
         assertEquals(clean.endSourceRange(), orig.endSourceRange());
     }
+
+    @ParameterizedTest @ValueSource(booleans = {true, false})
+    void cleansCaseSensitiveElements(boolean preserveCase) {
+        // https://github.com/jhy/jsoup/issues/2049
+        String html = "<svg><feMerge><feMergeNode kernelMatrix=1 /><feMergeNode><clipPath /></feMergeNode><feMergeNode />";
+        String[] tags = {"svg", "feMerge", "feMergeNode", "clipPath"};
+        String[] attrs = {"kernelMatrix"};
+
+        if (!preserveCase) {
+            tags = Arrays.stream(tags).map(String::toLowerCase).toArray(String[]::new);
+        }
+
+        Safelist safelist = Safelist.none().addTags(tags).addAttributes(":all", attrs);
+        String clean = Jsoup.clean(html, safelist);
+        String expected = "<svg>\n" +
+            " <feMerge>\n" +
+            "  <feMergeNode kernelMatrix=\"1\" />\n" +
+            "  <feMergeNode>\n" +
+            "   <clipPath />\n" +
+            "  </feMergeNode>\n" +
+            "  <feMergeNode />\n" +
+            " </feMerge>\n" +
+            "</svg>";
+        assertEquals(expected, clean);
+    }
+
 }
