@@ -52,6 +52,14 @@ Release 1.17.1 [PENDING]
   * Bugfix: in W3CDom, if the jsoup input document contained an empty doctype, the conversion would fail with a
     DOMException. Now, said doctype is discarded, and the conversion continues.
 
+  * Bugfix: when cleaning a document containing SVG elements (or other foreign elements that have preserved case names),
+    the cleaned output would be incorrectly nested if the safelist had a different case than the input document.
+    <https://github.com/jhy/jsoup/issues/2049>
+
+  * Bugfix: when cleaning a document, the output style of unknown self-closing tags from the input was not preserved in
+    the output. (So a <foo /> in the input, if safe-listed, would be output as <foo></foo>.)
+    <https://github.com/jhy/jsoup/issues/2049>
+
   * Build Improvement: added a local test proxy implementation, for proxy integration tests.
     <https://github.com/jhy/jsoup/pull/2029>
 
